# talk

./: CMakeLists.txt  project1.html  tcp_rtt_s.c  udp_rtt_s.c
data/: 1_indigo_to_wolf.csv  1_lab_to_pi.csv  1_wolf_to_pi.csv  2_indigo_to_wolf.csv  2_lab_to_pi.csv  2_wolf_to_pi.csv  3_indigo_to_wolf.csv  3_su_to_pi.csv  3_wolf_to_pi.csv  4_indigo_to_wolf.csv  4_su_to_pi.csv  4_wolf_to_pi.csv  5_indigo_to_wolf.csv  5_wolf_to_pi.csv  Data.ods
src/: CMakeLists.txt  tcp_client.c  tcp_client_msg.c  tcp_client_thr.c  tcp_server.c  tcp_server_msg.c  tcp_server_thr.c  udp_client.c  udp_client_msg.c  udp_server.c  udp_server_msg.c
