add_executable(tcp_server tcp_server.c)
add_executable(tcp_client tcp_client.c)
add_executable(udp_server udp_server.c)
add_executable(udp_client udp_client.c)
add_executable(tcp_client_thr tcp_client_thr.c)
add_executable(tcp_server_thr tcp_server_thr.c)
add_executable(tcp_client_msg tcp_client_msg.c)
add_executable(tcp_server_msg tcp_server_msg.c)
